fix: `<Sidebar />` on Firefox

--- a/src/styles/tonsky.less
+++ b/src/styles/tonsky.less
@@ -120,6 +120,7 @@ h3 {
 
 h1 {
   font-size: 1.95em;
+  text-align: left;
 }
 
 h3 {
